[fix home blade]sperimentazione breakpoint per il responsive + icone

--- a/public/public_css/home.css
+++ b/public/public_css/home.css
@@ -8,6 +8,6 @@ h1{
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     font-weight: bold !important;
 }
-h3{
-    font-size: 20px !important;
-}
+/* img {
+    width: 100% !important;
+} */
