--- a/resources/css/auth.css
+++ b/resources/css/auth.css
@@ -1,7 +1,7 @@
 body {
     display: flex;
     justify-content: center;
-    background-color: #1e1e1e;
+    background-color: #e1e6d1;
 }
 
 .container {
@@ -13,7 +13,9 @@ body {
     height: 30rem;
     margin-top: 10vh;
     border-radius: 1em;
-    box-shadow: black;
+    -webkit-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.65);
+    -moz-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.65);
+    box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.65);
 }
 
 .split-background {
