[create product + category show]Fixato errore nel collegamento delle categorie al profotto nel file product-create e aggiunta pagina category show

--- a/resources/css/navbar.css
+++ b/resources/css/navbar.css
@@ -1,3 +1,12 @@
 .navbar {
     background-color: #053e10;
 }
+
+.navbar li
+{
+    color: white;
+}
+
+button.btn-hover a:hover,  button.btn-hover a:focus{
+    color: rgb(0, 182, 33) !important;
+};
