--- a/resources/css/navbar.css
+++ b/resources/css/navbar.css
@@ -1,5 +1,7 @@
 .navbar {
-    background-color: #053e10;
+    background-color: #01212d;
+    margin: 2px 10px 0 10px;
+    border-radius: 15px 15px 15px 15px;
 }
 
 .navbar li
@@ -7,6 +9,12 @@
     color: white;
 }
 
-button.btn-hover a:hover,  button.btn-hover a:focus{
-    color: rgb(0, 182, 33) !important;
-};
+.dropdown-menu{
+    background-color: rgba(256, 256, 256, 0.4);
+    width: 10%;
+}
+
+.navbar-toggler{
+    color: aliceblue;
+}
+
