--- a/resources/css/auth.css
+++ b/resources/css/auth.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500&display=swap');
+
 body {
     display: flex;
     justify-content: center;
@@ -20,11 +22,11 @@ body {
 
 .split-background {
     background-color: #01212d;
-    background-image: -webkit-linear-gradient(-45deg, #01212d 50%, #00292d 50%);
+    background-image: -webkit-linear-gradient(-40deg, #01212d 50%, #00292d 50%);
 }
 
 .title {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Orbitron', sans-serif;
     font-weight: 100;
     color: white;
     margin-top: 4vh;
@@ -66,10 +68,11 @@ button {
     margin-top: 1em;
 }
 
-i {
+.bi-envelope-at, .bi-key, .bi-person, .bi-person-add, .bi-asterisk {
     position: absolute;
     z-index: 1;
     padding: 0.5rem;
+    font-size: 1.2em;
 }
 
 .main-div-field {
@@ -82,3 +85,19 @@ i {
     color:white;
     opacity: 0.7;
 }
+
+.stocazzo {
+    height: 40rem;
+    margin-top: 2rem;
+    background-color: #01212d;
+    background-image: -webkit-linear-gradient(45deg, #01212d 50%, #00292d 50%);
+}
+
+.div-icon-social {
+    display: flex;
+    justify-content: space-around;
+    width: 14em;
+    height: 1.5em;
+    color: white;
+}
+
