--- a/resources/css/navbar.css
+++ b/resources/css/navbar.css
@@ -1,20 +1,30 @@
 .navbar {
     background-color: #01212d;
-    margin: 2px 10px 0 10px;
-    border-radius: 15px 15px 15px 15px;
+    margin: 0 10px 0 10px;
+    border-radius: 0 0 15px 15px;
 }
 
 .navbar li
 {
-    color: white;
+    color: #ffffff;
 }
 
 .dropdown-menu{
     background-color: rgba(256, 256, 256, 0.4);
-    width: 10%;
+    
 }
 
 .navbar-toggler{
-    color: aliceblue;
+    color: #ffffff;
+    border: #ffffff solid #ffffff; 
+}
+.navbar-toggler:hover{
+    background-color: #ffffff !important;
+    color: #01212d !important;
+    
 }
 
+li, a{
+    display:inline !important;
+    text-align: end !important;
+   }
