--- a/resources/css/navbar.css
+++ b/resources/css/navbar.css
@@ -1,3 +1,4 @@
+
 .navbar {
     background-color: #01212d;
     margin: 0 10px 0 10px;
@@ -10,16 +11,18 @@
 }
 
 .dropdown-menu{
-    background-color: rgba(256, 256, 256, 0.4);
+    background-color: #ffffff;
+    margin-left: -5em;
     
 }
 
 .navbar-toggler{
     color: #ffffff;
-    border: #ffffff solid #ffffff; 
+    border: 0 !important;
 }
+
 .navbar-toggler:hover{
-    background-color: #ffffff !important;
+    background-color: #ffffff6d !important;
     color: #01212d !important;
     
 }
@@ -27,4 +30,16 @@
 li, a{
     display:inline !important;
     text-align: end !important;
-   }
+}
+
+.submit{
+    background-color: #01212d;
+    color: #ffffff;
+    font-size: 15px;
+    padding: 5px 55px;
+    border-radius: 0 0 5px 5px;
+}
+.btn :hover{
+    color:#01212d !important;
+}
+
