[frontend corrections]home responsive, navbaro hover, inserisci annuncio responsive sm, da completare md e lg

--- a/resources/css/auth.css
+++ b/resources/css/auth.css
@@ -3,7 +3,7 @@
 body {
     display: flex;
     justify-content: center;
-    background-color: #e1e6d1;
+    background-color: #bad4d4a4;
 }
 
 .container {
