--- a/resources/css/auth.css
+++ b/resources/css/auth.css
@@ -157,11 +157,14 @@ button {
     -webkit-text-fill-color: transparent;
 }
 .bi-facebook:hover{
-  color: #3b5998;
-  background-image: linear-gradient( to bottom, transparent 20%, white 20%, white 93%, transparent 93% );
-  background-size: 55%;
-  background-position:20px;
+  
+  background-image:url(/public/site_img/Dot-points-1.png);
+  background-size: 100%;
   background-repeat: no-repeat;
+  background-position: center;
+  border-radius: 100%;
+  color: #3b5998;
+
     
 }
 
