[register blade FE] allineamento frontend login e register blade

--- a/resources/css/auth.css
+++ b/resources/css/auth.css
@@ -128,7 +128,7 @@ button {
     opacity: 0.7;
 }
 
-.stocazzo {
+.form-container {
     height: 40rem;
     margin-top: 2rem;
     background-color: #01212d;
