[fe js animation work page + navbar e admin panel adjustments + bug fixing]Implementata transizione all'apertura della pagina work, aggiunto link per l'adimn panel, modificata vista admin panel, bug fix searchbar]

--- a/resources/css/navbar.css
+++ b/resources/css/navbar.css
@@ -21,6 +21,10 @@
   outline: #ff8400 solid 0.5px !important;
   
 }
+
+.dropdown-menu{
+    background-color: #01212d;
+}
 .searchbar{
     box-shadow: 0px 0px 4px 4px #0000005a;
     padding: 0.5em;
