--- a/resources/css/navbar.css
+++ b/resources/css/navbar.css
@@ -1,10 +1,18 @@
+/* .navbar{
+    background-color:  #01212d;
+    height: 60px;
+} */
 
+
+
+ 
 
 
 .navbar {
     background-color: #01212d;
-    margin: 0 10px 0 10px;
-    border-radius: 0 0 15px 15px;
+    
+  
+    
 }
 
 .navbar li
@@ -109,4 +117,4 @@ form{
 
   .logout-field{
    padding: 0;
-  }
+  } 
