--- a/resources/css/searchbar.css
+++ b/resources/css/searchbar.css
@@ -3,8 +3,13 @@
 #01212d
 */
 .searchbar{
-    
+    margin: 10px;
     background-color: #01212d;
+    border-radius: 10px;
+    padding: 10px;
+    width: 60%;
+    
+    
    
 }
 
@@ -12,15 +17,30 @@ form{
     display: flex;
     flex-wrap: wrap;
     gap: 6px;
+    align-items: center;
+    
 }
 .search-input{
     flex: 1 0 130px;
+    width: 50%;
 }
 
 .cat-select-button{
     flex: 1 0 130px;
+    
 }
 
 .search-btn{
     flex: 1 0 40px;
+    color: #FC8505;
+    border: 2px solid #FC8505;
+    
+}
+.search-btn:hover{
+    background-color: #FC8505;
+    color: #01212d;
+    font-size: x-large;
+    
+    
+
 }
