--- a/resources/css/card.css
+++ b/resources/css/card.css
@@ -1,6 +1,17 @@
 @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500&display=swap');
 
-.btnn {
+.topcat{
+    background-color: #00292d;
+    cursor: pointer;
+}
+
+.topcat > a, .topcat > i{
+    text-decoration: none;
+    color: #ffffff;
+}
+
+
+/* .btnn {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -13,9 +24,9 @@
     z-index: 0;
     bottom: 0;
     width: 100% !important;
-}
+} */
 
-.card-body {
+/* .card-body {
         padding-left: 1rem;
         padding-right: 1rem;
         height: 15rem;
@@ -23,16 +34,10 @@
         flex-direction: column;
         justify-content: space-between;
         align-items: center;
-        overflow: scroll;
-    
-      
+        overflow: scroll;   
 }
 
-.cat-name{
-    text-align: center;
-    margin: 0 !important;
-    font-size: 1em !important;
-}
+
 .ul-cat{
     padding: 0 !important;
 }
@@ -55,21 +60,112 @@
     border-radius: 1dvh;
     width: 15rem;
 
+} */
+
+.details{
+    list-style-type: none 
+    
+}
+.big-container{
+    min-height: 100vh;
+   
+}
+.card{
+    background-color: transparent;
+    border: none;
+}
+.container{
+    width: 1000px;
+    position: relative;
+    display: flex;
+    justify-content: space-between;
+    z-index: 0;
 }
 
-.cat-icon {
-    height: 170px;
-    align-items: center;
+.container .card{
+    position: relative;
+    cursor: pointer;
+}
+
+.container .card .face{
+    width: 300px;
+    height: 200px;
+    transition: 0.5s;
+}
+
+.container .card .face.face1{
+    position: relative;
     background-color: #00292d;
-    color: white;
-    font-family: 'Orbitron', sans-serif;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #ffffff;
+    z-index: 1;
+    
+    transform: translateY(100px);
 }
 
-.cat-link {
-    color: white;
+
+.container .card:hover .face.face1{
+    background: #ff0057;
+    transform: translateY(0);
+}
+
+.container .card .face.face1 .content{
+    opacity: 0.2;
+    transition: 0.5s;
+}
+
+.container .card:hover .face.face1 .content{
+    opacity: 1;
+}
+
+.container .card .face.face1 .content img{
+    max-width: 100px;
+}
+
+.container .card .face.face1 .content h3{
+    margin: 10px 0 0;
+    padding: 0;
+    color: #fff;
+    text-align: center;
+    font-size: 1.5em;
+}
+
+.container .card .face.face2{
+    position: relative;
+    background: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
+    box-sizing: border-box;
+    box-shadow: 0 20px 50px rgba(0, 0, 0, 0.8);
+    transform: translateY(-100px);
+}
+
+.container .card:hover .face.face2{
+    transform: translateY(0);
+    
+}
+
+.container .card .face.face2 .content p{
+    margin: 0;
+    padding: 0;
+}
+
+.container .card .face.face2 .content a{
+    margin: 15px 0 0;
+    display:  inline-block;
     text-decoration: none;
+    font-weight: 900;
+    color: #333;
+    padding: 5px;
+    border: 1px solid #333;
 }
 
-.btnn:hover{
-    color: #ff8400;
+.container .card .face.face2 .content a:hover{
+    background: #333;
+    color: #fff;
 }
+
