--- a/resources/css/card.css
+++ b/resources/css/card.css
@@ -66,16 +66,15 @@
     list-style-type: none 
     
 }
-.big-container{
+/* .big-container{
     min-height: 100vh;
-   
-}
+   paddin
+} */
 .card{
     background-color: transparent;
     border: none;
 }
 .container{
-    width: 1000px;
     position: relative;
     display: flex;
     justify-content: space-between;
@@ -105,23 +104,21 @@
     transform: translateY(100px);
 }
 
-
 .container .card:hover .face.face1{
-    background: #ff0057;
     transform: translateY(0);
 }
 
 .container .card .face.face1 .content{
-    opacity: 0.2;
+    padding: 10px;
+    background-color: #FC8505;
+    /* opacity: 0.2; */
     transition: 0.5s;
 }
 
 .container .card:hover .face.face1 .content{
+    padding: 0;
+    image-rendering: fill;
     opacity: 1;
-}
-
-.container .card .face.face1 .content img{
-    max-width: 100px;
 }
 
 .container .card .face.face1 .content h3{
@@ -138,7 +135,6 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 20px;
     box-sizing: border-box;
     box-shadow: 0 20px 50px rgba(0, 0, 0, 0.8);
     transform: translateY(-100px);
@@ -160,7 +156,7 @@
     text-decoration: none;
     font-weight: 900;
     color: #333;
-    padding: 5px;
+
     border: 1px solid #333;
 }
 
